2004-08-19  Tor Lillqvist  <tml@iki.fi>

	* glib/gunicollate.c (g_utf8_collate, g_utf8_collate_key): Correct
	source and destination charset parameter order in g_convert()
	call. (#150394, possibly also #141124)

2004-08-20  Jon K Hellan  <hellan@acm.org>

	* glib/goption.h: Remove trailing commas.

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for all four values of the
	visibility attribute; gcc 2.96 seems to miss 
	"default".  (#150379, Vincent Noel)

2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-11  Ray Strode  <rstrode@redhat.com>

	* docs/reference/glib/glib-sections.txt: 
	* glib/gutils.[ch] (g_get_user_data_dir),
	(g_get_user_config_dir), (g_get_user_cache_dir),
	(g_get_system_data_dirs), (g_get_system_config_dirs): 
	Add new XDG basedir API (bug 139973).

2004-08-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmacros.h: Remove G_GNUC_INTERNAL from here.
	* configure.in: Check whether the visibility attribute
	works and define G_HAVE_GNUC_VISIBILITY and 
	G_GNUC_INTERNAL in glibconfig.h correspondingly.

Mon Aug  9 17:37:56 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmacros.h (G_GNUC_INTERNAL): Define empty if gcc is too old.

2004-08-06  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in glib/glib.def : updated

	* glib/gutils.c : avoid 'inconsitent dll linkage' by not
	defining extern char** environ with msvc

2004-08-06  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-gettext.m4: Require ngettext.  (#123847,
	Danilo Segan)

Thu Aug  5 20:53:00 2004  Ray Strode  <rstrode@redhat.com>

	* glib/gutils.h (g_get_codeset): strdup result so caller
	doesn't free internally managed memory.

2004-08-04  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add glib_check_version.

	* config.h.win32.in: Update to match what configure produces. Add
	the G_ATOMIC_*. Define G_ATOMIC_I486 when compiling with gcc. Move